@startuml

title __PAOOGAME's Class Diagram__\n

  namespace PaooGame {
    class PaooGame.Game {
        - bs : BufferStrategy
        - g : Graphics
        - gameThread : Thread
        {static} - instance : Game
        - runState : boolean
        + GetCamera()
        + GetHeight()
        + GetKeyManager()
        + GetPlayState()
        + GetWidth()
        + SetAboutState()
        + SetMenuState()
        + SetPlayState()
        + SetSettingsState()
        + StartGame()
        + StopGame()
        {static} + getInstance()
        + run()
        - Draw()
        - Game()
        - InitGame()
        - Update()
    }
  }
  

  namespace PaooGame {
    class PaooGame.Main {
        {static} + main()
    }
  }
  

  namespace PaooGame {
    class PaooGame.RefLinks {
        + GetCamera()
        + GetGame()
        + GetHeight()
        + GetKeyManager()
        + GetMap()
        + GetMapHeight()
        + GetMapWidth()
        + GetTile()
        + GetWidth()
        + RefLinks()
        + SetGame()
        + SetMap()
    }
  }
  

  PaooGame.Game .up.|> java.lang.Runnable
  PaooGame.Game o-- PaooGame.States.AboutState : aboutState
  PaooGame.Game o-- PaooGame.Camera.Camera : camera
  PaooGame.Game o-- PaooGame.Input.KeyManager : keyManager
  PaooGame.Game o-- PaooGame.States.MenuState : menuState
  PaooGame.Game o-- PaooGame.States.PlayState : playState
  PaooGame.Game o-- PaooGame.RefLinks : refLink
  PaooGame.Game o-- PaooGame.States.SettingsState : settingsState
  PaooGame.Game o-- PaooGame.Tiles.Tile : tile
  PaooGame.Game o-- PaooGame.GameWindow.GameWindow : wnd
  PaooGame.RefLinks o-- PaooGame.Game : game
  PaooGame.RefLinks o-- PaooGame.Maps.Map : map


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
